--- a/places.html
+++ b/places.html
@@ -27,7 +27,7 @@
               <input id="city" type="text" />
               <label for="state" id="statelabel">State</label>
               <input id="state" type="text" />
-              <input type="button" id="button" value="Add" />
+              <input type="button" id="button-1" value="Add" />
            </fieldset>
            <div id="results">
               <ol></ol>
