--- a/registr.html
+++ b/registr.html
@@ -16,11 +16,12 @@
       <div class="dist2">
       <h1>Few Words About Yourself</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-
+      <div id="errorText"></div>
+      <div id="errorTextforEmail"></div>
       <div class="contact">
          <a name="contact"></a>
          <div class="container">
-   <form action="/action_page.php">
+   <form action="congrats.html" novalidate="novalidate">
      <label for="fname">First Name</label>
      <input type="text" id="fname" class="reg" name="firstname" placeholder="Your name..">
 
@@ -28,17 +29,19 @@
      <input type="text" id="lname" class="reg" name="lastname" placeholder="Your name..">
 
      <label for="email">Your E-mail</label>
-     <input type="text" id="lname" class="reg" name="lastname" placeholder="Your e-mail..">
+     <input type="email" id="email" class="reg" name="email" placeholder="Your e-mail.." required>
 
      <label for="subject">Comments</label>
      <textarea id="subject" name="subject" class="reg" placeholder="Write something.." style="height:200px"></textarea>
 
-     <input type="submit" class="button" value="Register"><a href="congrats.html">c</a>
+     <input type="submit" class="button" value="Register">
    </form>
   </div>
       </div>
 </div>
 
  </div>
+ <script src="scriptreg.js">
+ </script>
   </body>
 </html>
