--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="showcase">
     <div class="intro">
 
-    <h1>Go on Adventure</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <h1>Travel more. Worry less.</h1>
+    <p>Explore the most exciting places across the country. Our experts will help you build the best trails and road trips based on your preference, that turns a nature getaway into an unforgettable experience. Book now and pay later. </p>
     <a href="places.html" class="button button5">BOOK NOW</a>
 
 
