--- a/places.html
+++ b/places.html
@@ -14,8 +14,8 @@
         <a href="index.html"><img src="logo.png" alt="logo" class="logo"></a>
       </nav>
       <div class="dist">
-      <h1>Where Would You Like to Go?</h1>
-      <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h1>Where Would You Like To Go?</h1>
+      <p>Tell us where you want to go and what you're into. Our team will help you find all the best stops along the way. Choose at least four destinations. </p>
       <form>
            <fieldset id="zipset">
               <label for="zip" id="ziplabel">Enter ZIP Code</label>
@@ -33,7 +33,7 @@
               <ol></ol>
            </div>
       </form>
-      <a href="registr.html" class="button">Continue</a>
+      <a href="registr.html" class="button" id="btn-reg">Continue</a>
     </div>
  </div>
  <script src="script.js">
