--- a/registr.html
+++ b/registr.html
@@ -15,7 +15,7 @@
       </nav>
       <div class="dist2">
       <h1>Few Words About Yourself</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+      <p> Sign up using your email address. Don’t be shy to leave some comments and details about your upcoming trip; it will help us to build travel plan for you! </p>
       <div id="errorText"></div>
       <div id="errorTextforEmail"></div>
       <div class="contact">
